# plethora_monitor_v1

./: .env.example  Cargo.toml  README.md  Settings.toml  state_usdc_monitor.json  state_weth_monitor.json
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/monitor/: Cargo.toml
crates/monitor/src/: events.rs  filter.rs  lib.rs  tx.rs
crates/monitor/src/primitives/: models.rs  utils.rs
crates/notifications/: Cargo.toml
crates/notifications/src/: email.rs  lib.rs
crates/server/: Cargo.toml
crates/server/src/: handler.rs  state.rs
