[workspace]
members = [
    "bin/*",
    "crates/*",
]
default-members = ["bin/plethora_monitor"]
resolver = "2"

[workspace.package]
name = "plethora_monitor"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
alloy = { version = "1.1.0", features = ["full"] }
anyhow = "1.0.100"
url = "2.5.0"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
worker = { version = "0.6.7", features = ['http', 'axum'] }
worker-macros = { version = "0.6.7", features = ['http'] }
futures-util = "0.3.31"