[workspace]
members = [
    "bin/*",
    "crates/*",
]
default-members = ["bin/plethora_monitor"]
resolver = "2"

[workspace.package]
name = "plethora_monitor"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
alloy = { version = "1.1.0", features = ["full"] }
alloy-chains = "0.2.20"
anyhow = "1.0.100"
axum = "0.7.5"
config = "0.13"
dotenvy = "0.15.7"
futures = "0.3.31"
foundry-block-explorers = "0.22.0"
reqwest = { version = "0.11", features = ["json"] }
url = "2.5.0"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
worker = { version = "0.6.7", features = ['http', 'axum'] }
worker-macros = { version = "0.6.7", features = ['http'] }
