[package]
name = "monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
