[package]
name = "monitor"
version = "0.1.0"
edition = "2024"

[dependencies]

notifications = { path = "../notifications" }

alloy = { workspace = true }
alloy-chains = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
foundry-block-explorers = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }
