[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
monitor = { path = "../monitor" }
config = { path = "../config" }

alloy = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
futures = {workspace = true}
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true  }
